@@ -1,55 +1,0 @@
-<!DOCTYPE html>
-<!--
-/*
- * INTER-Mediator
- * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
- * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
- *
- * INTER-Mediator is supplied under MIT License.
- * Please see the full license for details:
- * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
- */  -->
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>INTER-Mediator - Sample - Authorized Chat / MySQL</title>
-    <link href="../../node_modules/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
-    <script src="../../node_modules/flatpickr/dist/flatpickr.min.js"></script>
-    <script src="../../node_modules/flatpickr/dist/l10n/ja.js"></script>
-    <script src="include_MySQL.php"></script>
-    <script src="../../node_modules/inter-mediator-plugin-flatpickr/index.js"></script>
-    <script>
-      INTERMediatorOnPage.doBeforeConstruct = function () {
-        INTERMediatorLog.suppressDebugMessageOnPage = true;
-      };
-    </script>
-</head>
-<body>
-<header>
-    <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
-</header>
-<div id="wrapper">
-    <h1>JavaScript Component Test (flatpickr)</h1>
-    <table>
-        <thead>
-        <tr>
-            <th>Date and Time</th>
-            <th>Message</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td><input type="text" data-im="testtable@dt1" data-im-widget="flatpickr"></td>
-            <td data-im="testtable@text1"></td>
-            <td></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<footer>
-    <small>INTER-Mediator ©2020</small>
-</footer>
-</body>
-</html>
